--- a/module3/index.html
+++ b/module3/index.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Our Menu</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/user.css">
+</head>
+<body>
+	<!-- START HEADER & NAVBAR -->
+	<header>
+		<nav id="header-nav" class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="index.html">Food, LLC</a>
 
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">  
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse" >
+					<ul id="nav-list" class="nav navbar-nav navbar-right hidden-lg hidden-md hidden-sm">
+						<li><a href="#chicken">Chiken</a></li>
+						<li><a href="#beef">Beef</a></li>
+						<li><a href="#sushi">Suchi</a></li>
+					</ul>  
+				</div>
+			</div>
+		</nav>
+	</header>
+	<!-- END HEADER -->
+	<!-- START MAIN CONTAINER -->
+	<div class="container">
+	<h1 class="text-center">Our menu</h1> 
+
+		<div class= "row">
+			
+			<div class="col-lg-4 col-sm-6">
+			<div id="chicken">
+				<h3 class="text-center">Chiken</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quia autem impedit necessitatibus ex saepe porro aspernatur id, culpa veritatis non fuga. Impedit placeat, in rem neque explicabo veniam consequuntur!
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore consequuntur, eveniet non error voluptates inventore accusantium. Rem aliquid nam, perspiciatis iste quam dicta iusto ratione, labore quia, hic et similique. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				</div>
+				</div>
+
+				<div class="col-lg-4 col-sm-6">
+				<div id="beef">
+					<h3 class="text-center">Beef</h3> 
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quia autem impedit necessitatibus ex saepe porro aspernatur id, culpa veritatis non fuga. Impedit placeat, in rem neque explicabo veniam consequuntur!
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit reiciendis, id vel odit? Adipisci quod ut ex fugit consequatur numquam hic reiciendis. Velit veritatis reiciendis pariatur, cupiditate, cum iste enim. </p>
+					</div>
+					</div>
+
+					<div class="col-lg-4  col-sm-12">
+					<div id="sushi">
+						<h3 class="text-center">Sushi</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quia autem impedit necessitatibus ex saepe porro aspernatur id, culpa veritatis non fuga. Impedit placeat, in rem neque explicabo veniam consequuntur!
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis harum enim necessitatibus cumque alias, amet impedit, architecto omnis, tempora pariatur, deserunt modi deleniti doloremque itaque libero eos. Aspernatur, animi, et? Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+						</div>
+						</div>
+
+                
+					</div>
+					</div>
+
+
+					<!-- END MAIN CONTAINER -->
+					<script src="http://code.jquery.com/jquery.min.js"></script>
+					<script type="text/javascript" src="js/bootstrap.min.js"></script>
+					<script type="text/javascript" src="js/npm.js"></script>
+				</body>
+				</html>
